--- a/src/main/java/com/techmineinc/pages/CylinderCheckInPage.html
+++ b/src/main/java/com/techmineinc/pages/CylinderCheckInPage.html
@@ -50,7 +50,7 @@ limitations under the License.
                             <label>Returned Date</label>
                         </div>
                         <div class="w3-mobile w3-quarter w3-panel">
-                            <input id="broughtInBy" wicket:id="broughtInBy" class="w3-input" style="float: right" type="text" placeholder="Customer ..."/>
+                            <input id="broughtInBy" wicket:id="broughtInBy" class="w3-input" style="float: right" type="text" placeholder="Customer Rep ..."/>
                             <label>Turned In By</label><br/>
                         </div>
                     </div>
@@ -61,7 +61,7 @@ limitations under the License.
                         </div>
                     </div>
                     <div class="w3-center w3-panel w3-dark-gray">
-                        <button id="checkIn" wicket:id="checkIn" type="submit" class="w3-button">Check In</button>
+                        <button id="checkIn" wicket:id="checkIn" type="submit" class="w3-button w3-green">Check In</button>
                         <button id="cancel" wicket:id="cancel" type="submit" class="w3-button">Cancel</button>
                     </div>
                 </form>
