Updated test for CylinderCheckInPage

--- a/src/main/java/com/techmine/ui/pages/CylinderCheckInPage.html
+++ b/src/main/java/com/techmine/ui/pages/CylinderCheckInPage.html
@@ -36,14 +36,14 @@ limitations under the License.
                             <label>Serial No</label>
                         </div>
                         <div class="w3-mobile w3-quarter w3-panel">
-                            <select id="cylinderLocation" class="w3-mobile w3-select" name="location">
-                                <option value="">Select an location</option>
-                                <option value="out">OWC</option>
-                                <option value="inStoresA">In Store Room A</option>
-                                <option value="inStoresB">In Store Room B</option>
-                                <option value="atPlantA">At Plant A</option>
+                            <select wicket:id="selectCustomer" class="w3-mobile w3-select" name="location">
+                                <option value="">Select an customer</option>
+                                <option value="out">JB Welding</option>
+                                <option value="inStoresA">AB Welding</option>
+                                <option value="inStoresB">LB Welding</option>
+                                <option value="atPlantA">QB Welding</option>
                             </select>
-                            <label>Location</label>
+                            <label>Customer</label>
                         </div>
                         <div class="w3-mobile w3-quarter w3-panel">
                             <input id="turnedInDate" wicket:id="turnedInDate" class="w3-input"  type="datetime-local"/>
