Updated MainPage  to have a wicket componenty for InventoryBrowser button.

--- a/src/main/java/com/techmine/ui/pages/MainPage.html
+++ b/src/main/java/com/techmine/ui/pages/MainPage.html
@@ -30,7 +30,7 @@ limitations under the License.
                     <button id="checkOutCylinder"  type="submit" class="w3-button w3-black w3-block">Check Out Cylinder</button><p/>
                     <button id="addCylinder"  type="submit" class="w3-button w3-black w3-block">Add Cylinder</button><p/>
                     <button id="addCustomer"  type="submit" class="w3-button w3-black w3-block">Add Customer</button><p/>
-                    <button id="viewInventory"  type="submit" class="w3-button w3-black w3-block">Browse Inventory</button><p/>
+                    <button wicket:id="browseInventory"  type="submit" class="w3-button w3-black w3-block">Browse Inventory</button><p/>
                     <button id="signOut"  type="submit" class="w3-button w3-black w3-block">Sign Out</button><p/>
                 </form>
             </div>
