--- a/src/main/java/com/techmine/ui/pages/InventoryBrowser.html
+++ b/src/main/java/com/techmine/ui/pages/InventoryBrowser.html
@@ -25,6 +25,8 @@ limitations under the License.
 
     </head>
     <body>
-        <div>TODO write content</div>
+        <wicket:extend>
+            <div>TODO Inventory Browser</div>
+        </wicket:extend>
     </body>
 </html>
