updated css to reflect css files in application root.

--- a/src/main/java/com/techmine/gs/ui/pages/AddCylinder.html
+++ b/src/main/java/com/techmine/gs/ui/pages/AddCylinder.html
@@ -16,13 +16,9 @@ limitations under the License.
 -->
 
     <head>
-        <link rel="stylesheet" href="style.css" type="text/css"/>
-        <link rel="stylesheet" href="style.css" type="text/css">
-        <link rel="stylesheet" href="www.w3schools.com_w3css_4_w3.css" type="text/css"/>
-        <link rel="stylesheet" href="style.css" type="text/css">
-        <link rel="stylesheet" href="style.css" type="text/css"/>
-
-
+       
+        <link href="../../../../../../webapp/www.w3schools.com_w3css_4_w3.css" rel="stylesheet" type="text/css"/>
+        <link href="../../../../../../webapp/style.css" rel="stylesheet" type="text/css"/>
 
 
 
