--- a/src/main/java/com/techmine/gs/ui/pages/AddCylinder.html
+++ b/src/main/java/com/techmine/gs/ui/pages/AddCylinder.html
@@ -54,14 +54,14 @@ limitations under the License.
 
 <div class="separator">
 
-    <label class="txtLabel"> Serial#: :</label>
+    <label class="txtLabel"> Serial#:</label>
     <input wicket:id="SerialNum" class="inputField" type="text" placeholder="Enter Serial Number">
 
 </div>
 
 <div class="separator">
     <label class="txtLabel"> Type :</label>
-    <select class="selectField" name="type">
+    <select wicket:id = "Type" class="selectField" name="type">
         <option selected="selected">Select a type </option>
         <option value="1"> Propane</option>
         <option value="2"> Carbon Dioxide</option>
@@ -75,7 +75,7 @@ limitations under the License.
 
 <div class="separator">
     <label class="txtLabel"> Capacity :</label>
-    <select class="selectField" name="capacity">
+    <select wicket:id =  "Capacity" class="selectField" name="capacity">
         <option selected="selected">Select a capacity </option>
         <option value="40"> 40CF</option>
         <option value="60"> 60CF</option>
@@ -87,7 +87,7 @@ limitations under the License.
 
 <div class="separator">
     <label class="txtLabel"> Owner :</label>
-    <select class="selectField" name="capacity">
+    <select wicket:id= "Owner" class="selectField" name="capacity">
         <option selected="selected">Select an owner </option>
         <option value="userid-40"> Elesha</option>
         <option value="userid-60"> Bethany</option>
@@ -102,8 +102,8 @@ limitations under the License.
 
 
 
-<button class="btn-submit add "> Add Cylinder</button>
-<button class="btn-submit cancel "> Cancel</button>
+<button wicket:id="Add" class="btn-submit add "> Add Cylinder</button>
+<button wicket:id="cancel" class="btn-submit cancel "> Cancel</button>
 
 
 
