--- a/src/main/java/com/techmine/gs/ui/pages/AddCylinder.html
+++ b/src/main/java/com/techmine/gs/ui/pages/AddCylinder.html
@@ -27,9 +27,10 @@ limitations under the License.
     <link rel="stylesheet" href="../../../../../../webapp/www.w3schools.com_w3css_4_w3.css" type="text/css">
     <link rel="stylesheet" href="../../../../../../webapp/www.w3schools.com_w3css_4_w3.css" type="text/css"/>
 
- <title>Add Cylinder</title>
+ 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Add Cylinder</title>
 </head>
 
 
@@ -50,6 +51,7 @@ limitations under the License.
 
 
 <div class="title">
+    <label class ="txtLabel"> Add Cylinder</label>
     <svg xmlns="http://www.w3.org/2000/svg" class="logo" fill="none" viewBox="0 0 24 24" stroke="currentColor">
     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
           d="M12 9v3m0 0v3m0-3h3m-3 0H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
@@ -107,7 +109,7 @@ limitations under the License.
 
 
 
-<button wicket:id="Add" class="btn-submit add "> Add Cylinder</button>
+<button wicket:id="Add" class="btn-submit add "> Add </button>
 <button wicket:id="cancel" class="btn-submit cancel "> Cancel</button>
 
 
