changed id ="owner" to id="cylinderOwner.

--- a/src/main/java/com/techmine/gs/ui/pages/AddCylinder.html
+++ b/src/main/java/com/techmine/gs/ui/pages/AddCylinder.html
@@ -59,7 +59,7 @@ limitations under the License.
                             </div>
                             <div class="">
                                 <label class="txtLabel"> Owner :</label>
-                                <select id= "Owner" class="selectField" name="capacity">
+                                <select id= "cylinderOwner" class="selectField" name="capacity">
                                     <option selected="selected">Select an owner </option>
                                     <option value="userid-40"> Elesha</option>
                                     <option value="userid-60"> Bethany</option>
