added w3.css classes to layout add cylinder form.  this is for demo purposes.  it is layered out for a small mobile device additional classes can be added to make it responsive.

--- a/src/main/java/com/techmine/gs/ui/pages/AddCylinder.html
+++ b/src/main/java/com/techmine/gs/ui/pages/AddCylinder.html
@@ -25,11 +25,11 @@ limitations under the License.
     </head>
     <body>
         <wicket:extend>
-            <form id="form">
+            <form id="form" class="w3-display-topmiddle">
                 <div class="w3-container">
                     <div class="w3-card-2 w3-amber">
-                        <header class="w3-container w3-blue">
-                            <label class ="w3-text-blue"> Add Cylinder</label>
+                        <header class="w3-panel w3-blue">
+                            <label class ="w3-text-black w3-center"><h1>Add Cylinder</h1></label>
                         </header>
                         <div class="w3-container">
                             <div class="">
@@ -69,9 +69,9 @@ limitations under the License.
                                 </select>
                             </div>
                         </div>
-                        <footer>
-                            <button id="Add" class="btn-submit add"> Add </button>
-                            <button id="cancel" class="btn-submit cancel"> Cancel</button>
+                        <footer class="w3-panel w3-blue-gray w3-center">
+                            <button id="Add" class="w3-button"> Add </button>
+                            <button id="cancel" class="w3-button"> Cancel</button>
                         </footer>
                     </div>
                 </div>
