added form to Addchlinder.html.  Added initialization methods to Add Cylinder

--- a/src/main/java/com/techmine/gs/ui/pages/AddCylinder.html
+++ b/src/main/java/com/techmine/gs/ui/pages/AddCylinder.html
@@ -27,14 +27,14 @@ limitations under the License.
         <wicket:extend>
             <form id="form" class="w3-display-topmiddle">
                 <div class="w3-container">
-                    <div class="w3-card-2 w3-amber">
+                    <div class="w3-card-2">
                         <header class="w3-panel w3-blue">
                             <label class ="w3-text-black w3-center"><h1>Add Cylinder</h1></label>
                         </header>
                         <div class="w3-container">
                             <div class="">
                                 <label class="txtLabel"> Serial#:</label>
-                                <input id="serialNum" class="inputField" type="text" placeholder="Enter Serial Number"/>
+                                <input id="serialNum" class="w3-input" type="text" placeholder="Enter Serial Number"/>
                             </div>
                             <div class="">
                                 <label class="txtLabel"> Type :</label>
