--- a/src/main/java/com/techmine/gs/ui/pages/AddCylinder.html
+++ b/src/main/java/com/techmine/gs/ui/pages/AddCylinder.html
@@ -25,7 +25,7 @@ limitations under the License.
     </head>
     <body>
         <wicket:extend>
-            <form id="form" class="w3-display-topmiddle">
+            <form wicket:id="form" class="w3-display-topmiddle">
                 <div class="w3-container">
                     <div class="w3-card-2 w3-amber">
                         <header class="w3-panel w3-blue">
