Added the AjaxFallBackButton component to the form in the onInitialize method. Wicket component done in html.

--- a/src/main/java/com/techmine/gs/ui/pages/AddCylinder.html
+++ b/src/main/java/com/techmine/gs/ui/pages/AddCylinder.html
@@ -70,7 +70,7 @@ limitations under the License.
                             </div>
                         </div>
                         <footer class="w3-panel w3-blue-gray w3-center">
-                            <button id="Add" class="w3-button"> Add </button>
+                            <button wicket:id="add" class="w3-button"> Add </button>
                             <button id="cancel" class="w3-button"> Cancel</button>
                         </footer>
                     </div>
