initialised serial number in accordance with issue #43

--- a/src/main/java/com/techmine/gs/ui/pages/AddCylinder.html
+++ b/src/main/java/com/techmine/gs/ui/pages/AddCylinder.html
@@ -34,7 +34,7 @@ limitations under the License.
                         <div class="w3-container">
                             <div class="">
                                 <label class="txtLabel"> Serial#:</label>
-                                <input id="serialNum" class="inputField" type="text" placeholder="Enter Serial Number"/>
+                                <input wicket:id="serialNumber" class="inputField" type="text" placeholder="Enter Serial Number"/>
                             </div>
                             <div class="">
                                 <label class="txtLabel"> Type :</label>
