--- a/src/main/java/com/techmine/gs/ui/pages/AddCylinder.html
+++ b/src/main/java/com/techmine/gs/ui/pages/AddCylinder.html
@@ -50,7 +50,7 @@ limitations under the License.
                             </div>
                             <div class="">
                                 <label class="txtLabel"> Capacity :</label>
-                                <select id =  "Capacity" class="selectField" name="capacity">
+                                <select wicket:id ="cylinderCapacity" class="selectField" name="capacity">
                                     <option selected="selected">Select a capacity </option>
                                     <option value="40"> 40CF</option>
                                     <option value="60"> 60CF</option>
