Implimented intializeCancel to satisfy issue #48.

--- a/src/main/java/com/techmine/gs/ui/pages/AddCylinder.html
+++ b/src/main/java/com/techmine/gs/ui/pages/AddCylinder.html
@@ -71,7 +71,7 @@ limitations under the License.
                         </div>
                         <footer class="w3-panel w3-blue-gray w3-center">
                             <button id="Add" class="w3-button"> Add </button>
-                            <button id="cancel" class="w3-button"> Cancel</button>
+                            <button wicket:id="cancel" class="w3-button"> Cancel</button>
                         </footer>
                     </div>
                 </div>
