Added wicket id for cylinder gas type

--- a/src/main/java/com/techmine/gs/ui/pages/AddCylinder.html
+++ b/src/main/java/com/techmine/gs/ui/pages/AddCylinder.html
@@ -38,7 +38,7 @@ limitations under the License.
                             </div>
                             <div class="">
                                 <label class="txtLabel"> Type :</label>
-                                <select id = "Type" class="selectField" name="type">
+                                <select wicket:id = "cylinderGasType" class="selectField" name="type">
                                     <option selected="selected">Select a type </option>
                                     <option value="1"> Propane</option>
                                     <option value="2"> Carbon Dioxide</option>
