--- a/src/main/java/com/techmine/gs/ui/pages/ownerpage/OwnerPage.html
+++ b/src/main/java/com/techmine/gs/ui/pages/ownerpage/OwnerPage.html
@@ -21,50 +21,50 @@ limitations under the License.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-    <wicket:extend>
-        <form wicket:id="form">
+    
+        <form class="w3-display-topmiddle">
             <header>
+                <style> input { max-width: 300px; } </style>
                 <h2>Owner Information</h2>
             </header>
-            <div class="content">
-                <label class="ownername">Name</label><br>
-                <input wicket:id="ownername"class="inputField" type="text"/>
+            <div class="w3-container">
+                <label class="txtLabel">Name</label><br>
+                <input class="inputField" type="text"/>
 
                 <br>
 
-                <label class="street1">Street 1</label><br>
-                <input wicket:id="street1"class="inputField" type="text" placeholder="Street address, Company name, P.O. Box, c/o"/>
+                <label class="txtLabel">Street 1</label><br>
+                <input class="inputField" type="text" placeholder="Street address, Company name, P.O. Box, c/o"/>
                 <br>
 
-                <div class="street2">
-                    <label class="street2">Street 2</label><br>
-                    <input wicket:id="street2"class="inputField" type="text" placeholder="Apt, Suite, Building, Unit, Floor, etc."/>
-                </div>
+                <label class="txtLabel">Street 2</label><br>
+                <input class="inputField" type="text" placeholder="Apt, Suite, Building, Unit, Floor, etc."/>
 
-                <label class="city">City</label><br>
-                <input wicket:id="city"class="inputField" type="text"/>
+
+                <label class="txtLabel">City</label><br>
+                <input class="inputField" type="text"/>
                 <br>
 
-                <label class="country">Country</label><br>
-                <input wicket:id="country"class="inputField" type="text"/>
+                <label class="txtLabel">Country</label><br>
+                <input class="inputField" type="text"/>
                 <br>
 
-                <label class="tel">Telephone</label><br>
-                <input wicket:id="tel"class="inputField" type="tel"/>
+                <label class="txtLabel">Telephone</label><br>
+                <input class="inputField" type="tel"/>
                 <br>
 
-                <label class="email">Email</label><br>
-                <input wicket:id="email"class="inputField" type="email"/>
+                <label class="txtLabel">Email</label><br>
+                <input class="inputField" type="email"/>
                 <br>
             </div>
             <br>
             <br>
-            <div class="buttons">
-                <button wicket:id="save" class="save">Save</button>
-                <button wicket:id="cancel" class="cancel ">Cancel</button>
-            </div>
+            <footer class="w3-panel w3-blue-gray w3-center">
+                <button class="w3-button">Save</button>
+                <button class="w3-button">Cancel</button>
+            </footer>
 
         </form> 
-    </wicket:extend>   
+    
 </body>
 </html>
