fixed up changes requested by pembertonc such as implementing w3schools input framework in accordance with issue #66

--- a/src/main/java/com/techmine/gs/ui/pages/ownerpage/OwnerPage.html
+++ b/src/main/java/com/techmine/gs/ui/pages/ownerpage/OwnerPage.html
@@ -19,42 +19,44 @@ limitations under the License.
         <title>Owner Page</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        <style> input { max-width: 300px; } </style> 
     </head>
     <body>
-    
+
         <form class="w3-display-topmiddle">
             <header>
-                <style> input { max-width: 300px; } </style>
+
                 <h2>Owner Information</h2>
             </header>
             <div class="w3-container">
                 <label class="txtLabel">Name</label><br>
-                <input class="inputField" type="text"/>
+                <input class="w3-input" type="text"/>
 
                 <br>
 
-                <label class="txtLabel">Street 1</label><br>
-                <input class="inputField" type="text" placeholder="Street address, Company name, P.O. Box, c/o"/>
+                <label>Street 1</label><br>
+                <input class="w3-input" type="text" placeholder="Street address, Company name, P.O. Box, c/o"/>
                 <br>
 
-                <label class="txtLabel">Street 2</label><br>
-                <input class="inputField" type="text" placeholder="Apt, Suite, Building, Unit, Floor, etc."/>
-
-
-                <label class="txtLabel">City</label><br>
-                <input class="inputField" type="text"/>
+                <label>Street 2</label><br>
+                <input class="w3-input" type="text" placeholder="Apt, Suite, Building, Unit, Floor, etc."/>
                 <br>
 
-                <label class="txtLabel">Country</label><br>
-                <input class="inputField" type="text"/>
+                <label>City</label><br>
+                <input class="w3-input" type="text"/>
                 <br>
 
-                <label class="txtLabel">Telephone</label><br>
-                <input class="inputField" type="tel"/>
+                <label>Country</label><br>
+                <input class="w3-input" type="text"/>
                 <br>
 
-                <label class="txtLabel">Email</label><br>
-                <input class="inputField" type="email"/>
+                <label>Telephone</label><br>
+                <input class="w3-input" type="tel"/>
+                <br>
+
+                <label>Email</label><br>
+                <input class="w3-input" type="email"/>
                 <br>
             </div>
             <br>
@@ -65,6 +67,6 @@ limitations under the License.
             </footer>
 
         </form> 
-    
-</body>
+
+    </body>
 </html>
