Changed the form class.

--- a/src/main/java/com/techmine/gs/ui/pages/customerpage/CustomerPage.html
+++ b/src/main/java/com/techmine/gs/ui/pages/customerpage/CustomerPage.html
@@ -24,7 +24,7 @@ limitations under the License.
     </head>
     <body>
         
-        <form class="w3-display-topmiddle">
+        <form class="w3-display-topleft">
             <header>
                 <h2>Customer Information</h2>
             </header>
