Added a class to the label tag

--- a/src/main/java/com/techmine/gs/ui/pages/customerpage/CustomerPage.html
+++ b/src/main/java/com/techmine/gs/ui/pages/customerpage/CustomerPage.html
@@ -29,7 +29,7 @@ limitations under the License.
                 <h2>Customer Information</h2>
             </header>
                 <div class="w3-container">
-                    <label>Customer Name</label><br>
+                    <label class="txtLabel">Customer Name</label><br>
                 <input class="w3-input" type="text"/>
                 
                 <br>
