Avatar issue fixed. Logo is being displayed.

--- a/src/main/java/com/techmine/gs/ui/pages/loginpage/LoginPage.html
+++ b/src/main/java/com/techmine/gs/ui/pages/loginpage/LoginPage.html
@@ -17,10 +17,11 @@ limitations under the License.
 <html>
     <head>
         <title>TODO supply a title</title>
-        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-        <link rel="stylesheet" href="LoginPage.css">
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"/>
+        <link rel="stylesheet" href="LoginPage.css"/>
+        <link rel="stylesheet" href="../../../../../../../webapp/resources/css/www.w3schools.com_w3css_4_w3.css" type="text/css"/>
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
 
     <body>
@@ -31,10 +32,9 @@ limitations under the License.
 
             <!-- Login Page company logo icon -->
             <div class="imgcontainer">
-                <h1> Please Login </h1>
-                <img src="logoGS.png" alt="Avatar">
+                <h1>Please Login</h1>
+                <img src="logo.png" alt="Avatar" class="Avatar">
             </div>
-            <br><br><br>
 
             <!-- Login Page Credentials input layout -->
             <form action="/action_page.java" method="post">  
@@ -51,6 +51,6 @@ limitations under the License.
                 </label>
             </form> 
         </div>
-</body>
+    </body>
 </html>
 
