Created a dropdown menu for the label Country.

--- a/src/main/java/com/techmine/gs/ui/pages/customerpage/CustomerPage.html
+++ b/src/main/java/com/techmine/gs/ui/pages/customerpage/CustomerPage.html
@@ -62,7 +62,7 @@ limitations under the License.
                 <br>
                 
                 <div>
-                    <label>Country</label>
+                    <label>Country</label><br>
                     <select id="type" class="selectField" name="type">
                         <option>Select a Country</option>
                         <option>Antigua and Barbuda</option>
