--- a/src/main/java/com/techmine/gs/ui/pages/customerpage/CustomerPage.html
+++ b/src/main/java/com/techmine/gs/ui/pages/customerpage/CustomerPage.html
@@ -26,7 +26,7 @@ limitations under the License.
         
         <form class="w3-display-topmiddle">
             <header>
-                <h2>Customer Information</h2>
+                <b><h2>Customer Information</h2></b>
             </header>
                 <div class="w3-container">
                     
