Created a dropdown menu for the label Country.

--- a/src/main/java/com/techmine/gs/ui/pages/customerpage/CustomerPage.html
+++ b/src/main/java/com/techmine/gs/ui/pages/customerpage/CustomerPage.html
@@ -26,7 +26,7 @@ limitations under the License.
         
         <form class="w3-display-topmiddle">
             <header>
-                <b><h2>Customer Information</h2></b>
+                <h2><b>Customer Information</b></h2>
             </header>
                 <div class="w3-container">
                     
