--- a/src/main/java/com/techmine/gs/ui/pages/customerpage/CustomerPage.html
+++ b/src/main/java/com/techmine/gs/ui/pages/customerpage/CustomerPage.html
@@ -78,6 +78,7 @@ limitations under the License.
                         <option>Saint Kitts and Nevis</option>
                         <option>Saint Lucia</option>
                         <option>Saint Vincent and the Grenadines</option>
+                        <option>Suriname</option>
                         <option>Trinidad and Tobago</option>
                         
                     </select>
