Added an option to list of country

--- a/src/main/java/com/techmine/gs/ui/pages/customerpage/CustomerPage.html
+++ b/src/main/java/com/techmine/gs/ui/pages/customerpage/CustomerPage.html
@@ -84,6 +84,7 @@ limitations under the License.
                             <option>Saint Vincent and the Grenadines</option>
                             <option>Suriname</option>
                             <option>Trinidad and Tobago</option>
+                            <option>Other</option>
                         
                         </select>
                     </div>
