Added the fields other name and family name.

--- a/src/main/java/com/techmine/gs/ui/pages/customerpage/CustomerPage.html
+++ b/src/main/java/com/techmine/gs/ui/pages/customerpage/CustomerPage.html
@@ -36,13 +36,13 @@ limitations under the License.
                     <br>
                     
                     <div class="separator">
-                        <label>Middle Name: </label>
+                        <label>Other Name: </label>
                         <input class="w3-input" type="text"/>
                     </div>
                     <br>
                     
                     <div class="separator">
-                        <label>Last Name: </label>
+                        <label>Family Name: </label>
                         <input class="w3-input" type="text"/>
                     </div>
                     <br>
