--- a/src/main/java/com/techmine/gs/ui/pages/splashpage/SplashPage.html
+++ b/src/main/java/com/techmine/gs/ui/pages/splashpage/SplashPage.html
@@ -34,143 +34,144 @@ limitations under the License.
     </head>
 
     <body>
-        <div x-data="{ sidebarOpen: false }" class="wrapper">
+        <wicket:extend>
+            <div x-data="{ sidebarOpen: false }" class="wrapper">
 
-            <div :class="sidebarOpen ? 'display_object' : 'hide_object'" @click="sidebarOpen = false"
-                 class="sidebar_overlay">
-            </div>
-
-            <div :class="sidebarOpen ? 'sidebar_open' : 'sidebar_close'" class="sidebar">
-
-                <div class="logo_wrapper">
-                    <div class="logo_wrapper_inner">
-                        <svg class="sidebar_logo_icon" viewBox="0 0 512 512" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M364.61 390.213C304.625 450.196 207.37 450.196 147.386 390.213C117.394 360.22 102.398 320.911 102.398 281.6C102.398 242.291 117.394 202.981 147.386 172.989C147.386 230.4 153.6 281.6 230.4 307.2C230.4 256 256 102.4 294.4 76.7999C320 128 334.618 142.997 364.608 172.989C394.601 202.981 409.597 242.291 409.597 281.6C409.597 320.911 394.601 360.22 364.61 390.213Z"
-                                fill="#ff9800" stroke="#d17e03" stroke-width="2" stroke-linecap="round"
-                                stroke-linejoin="round"></path>
-                            <path
-                                d="M201.694 387.105C231.686 417.098 280.312 417.098 310.305 387.105C325.301 372.109 332.8 352.456 332.8 332.8C332.8 313.144 325.301 293.491 310.305 278.495C295.309 263.498 288 256 275.2 230.4C256 243.2 243.201 320 243.201 345.6C201.694 345.6 179.2 332.8 179.2 332.8C179.2 352.456 186.698 372.109 201.694 387.105Z"
-                                fill="white"></path>
-                        </svg>
-
-                        <span class="sidebar_logo_text ">Gas Supply</span>
-                    </div>
+                <div :class="sidebarOpen ? 'display_object' : 'hide_object'" @click="sidebarOpen = false"
+                     class="sidebar_overlay">
                 </div>
 
-                <nav class="sidebar_menu">
-                    <a class="link link_selected" href="/">
-                        <svg class="sidebar_icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                             stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                  d="M11 3.055A9.001 9.001 0 1020.945 13H11V3.055z"></path>
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                  d="M20.488 9H15V3.512A9.025 9.025 0 0120.488 9z"></path>
-                        </svg>
+                <div :class="sidebarOpen ? 'sidebar_open' : 'sidebar_close'" class="sidebar">
 
-                        <span class="link_text ">Dashboard</span>
-                    </a>
-
-                    <a class="link" href="#">
-                        <svg class="sidebar_icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                             stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                  d="M17 14v6m-3-3h6M6 10h2a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v2a2 2 0 002 2zm10 0h2a2 2 0 002-2V6a2 2 0 00-2-2h-2a2 2 0 00-2 2v2a2 2 0 002 2zM6 20h2a2 2 0 002-2v-2a2 2 0 00-2-2H6a2 2 0 00-2 2v2a2 2 0 002 2z">
-                            </path>
-                        </svg>
-
-                        <span class="link_text">Add Cylinders</span>
-                    </a>
-
-                    <a class="link" href="#">
-                        <svg class="sidebar_icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                             stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                  d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10">
-                            </path>
-                        </svg>
-
-                        <span class="link_text">View Cylinders</span>
-                    </a>
-
-                    <a class="link" href="#">
-                        <svg class="sidebar_icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                             stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                  d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z">
-                            </path>
-                        </svg>
-
-                        <span class="link_text">Edit Cylinders</span>
-                    </a>
-                </nav>
-            </div>
-
-
-
-
-
-            <div class="right_content_wrap">
-                <header class="header">
-                    <div class="wrap">
-                        <button @click="sidebarOpen = true" class="btn_mobile_switcher">
-                            <svg class="sidebar_icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M4 6H20M4 12H20M4 18H11" stroke="currentColor" stroke-width="2"
-                                      stroke-linecap="round" stroke-linejoin="round"></path>
+                    <div class="logo_wrapper">
+                        <div class="logo_wrapper_inner">
+                            <svg class="sidebar_logo_icon" viewBox="0 0 512 512" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M364.61 390.213C304.625 450.196 207.37 450.196 147.386 390.213C117.394 360.22 102.398 320.911 102.398 281.6C102.398 242.291 117.394 202.981 147.386 172.989C147.386 230.4 153.6 281.6 230.4 307.2C230.4 256 256 102.4 294.4 76.7999C320 128 334.618 142.997 364.608 172.989C394.601 202.981 409.597 242.291 409.597 281.6C409.597 320.911 394.601 360.22 364.61 390.213Z"
+                                    fill="#ff9800" stroke="#d17e03" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round"></path>
+                                <path
+                                    d="M201.694 387.105C231.686 417.098 280.312 417.098 310.305 387.105C325.301 372.109 332.8 352.456 332.8 332.8C332.8 313.144 325.301 293.491 310.305 278.495C295.309 263.498 288 256 275.2 230.4C256 243.2 243.201 320 243.201 345.6C201.694 345.6 179.2 332.8 179.2 332.8C179.2 352.456 186.698 372.109 201.694 387.105Z"
+                                    fill="white"></path>
                             </svg>
-                        </button>
 
-                        <!-- top nav could go there  -->
-
+                            <span class="sidebar_logo_text ">Gas Supply</span>
+                        </div>
                     </div>
 
-                    <div class="profile_nav">
-                        <div class="relative">
-                            <button class="profile_nav_button ">
-                                <svg class="sidebar_icon" viewBox="0 0 24 24" fill="none"
-                                     xmlns="http://www.w3.org/2000/svg">
-                                    <path
-                                        d="M15 17H20L18.5951 15.5951C18.2141 15.2141 18 14.6973 18 14.1585V11C18 8.38757 16.3304 6.16509 14 5.34142V5C14 3.89543 13.1046 3 12 3C10.8954 3 10 3.89543 10 5V5.34142C7.66962 6.16509 6 8.38757 6 11V14.1585C6 14.6973 5.78595 15.2141 5.40493 15.5951L4 17H9M15 17V18C15 19.6569 13.6569 21 12 21C10.3431 21 9 19.6569 9 18V17M15 17H9"
-                                        stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                        stroke-linejoin="round">
-                                    </path>
+                    <nav class="sidebar_menu">
+                        <a class="link link_selected" href="/">
+                            <svg class="sidebar_icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                 stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                      d="M11 3.055A9.001 9.001 0 1020.945 13H11V3.055z"></path>
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                      d="M20.488 9H15V3.512A9.025 9.025 0 0120.488 9z"></path>
+                            </svg>
+
+                            <span class="link_text ">Dashboard</span>
+                        </a>
+
+                        <a class="link" href="#">
+                            <svg class="sidebar_icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                 stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                      d="M17 14v6m-3-3h6M6 10h2a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v2a2 2 0 002 2zm10 0h2a2 2 0 002-2V6a2 2 0 00-2-2h-2a2 2 0 00-2 2v2a2 2 0 002 2zM6 20h2a2 2 0 002-2v-2a2 2 0 00-2-2H6a2 2 0 00-2 2v2a2 2 0 002 2z">
+                                </path>
+                            </svg>
+
+                            <span class="link_text">Add Cylinders</span>
+                        </a>
+
+                        <a class="link" href="#">
+                            <svg class="sidebar_icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                 stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                      d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10">
+                                </path>
+                            </svg>
+
+                            <span class="link_text">View Cylinders</span>
+                        </a>
+
+                        <a class="link" href="#">
+                            <svg class="sidebar_icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                 stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                      d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z">
+                                </path>
+                            </svg>
+
+                            <span class="link_text">Edit Cylinders</span>
+                        </a>
+                    </nav>
+                </div>
+
+
+
+
+
+                <div class="right_content_wrap">
+                    <header class="header">
+                        <div class="wrap">
+                            <button @click="sidebarOpen = true" class="btn_mobile_switcher">
+                                <svg class="sidebar_icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M4 6H20M4 12H20M4 18H11" stroke="currentColor" stroke-width="2"
+                                          stroke-linecap="round" stroke-linejoin="round"></path>
                                 </svg>
                             </button>
 
-
-
+                            <!-- top nav could go there  -->
 
                         </div>
 
-                        <div x-data="{ dropdownOpen: false }" class="relative">
-                            <button @click="dropdownOpen = ! dropdownOpen" class="btn_profile">
-                                <img class="profile_img" src="https://avatars.githubusercontent.com/u/4702269?s=40&v=4"
-                                     alt="Your avatar">
-                            </button>
+                        <div class="profile_nav">
+                            <div class="relative">
+                                <button class="profile_nav_button ">
+                                    <svg class="sidebar_icon" viewBox="0 0 24 24" fill="none"
+                                         xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M15 17H20L18.5951 15.5951C18.2141 15.2141 18 14.6973 18 14.1585V11C18 8.38757 16.3304 6.16509 14 5.34142V5C14 3.89543 13.1046 3 12 3C10.8954 3 10 3.89543 10 5V5.34142C7.66962 6.16509 6 8.38757 6 11V14.1585C6 14.6973 5.78595 15.2141 5.40493 15.5951L4 17H9M15 17V18C15 19.6569 13.6569 21 12 21C10.3431 21 9 19.6569 9 18V17M15 17H9"
+                                            stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                            stroke-linejoin="round">
+                                        </path>
+                                    </svg>
+                                </button>
 
-                            <div x-show="dropdownOpen" @click="dropdownOpen = false" class="dropdownOpen"
-                                 style="display: none;"></div>
 
-                            <div x-show="dropdownOpen" class="dropdownOpen_inner" style="display: none;">
-                                <a href="#" class="dropdownOpen_links">Profile</a>
-                                <a href="#" class="dropdownOpen_links">Settings</a>
-                                <a href="/login" class="dropdownOpen_links">Logout</a>
+
+
+                            </div>
+
+                            <div x-data="{ dropdownOpen: false }" class="relative">
+                                <button @click="dropdownOpen = ! dropdownOpen" class="btn_profile">
+                                    <img class="profile_img" src="https://avatars.githubusercontent.com/u/4702269?s=40&v=4"
+                                         alt="Your avatar">
+                                </button>
+
+                                <div x-show="dropdownOpen" @click="dropdownOpen = false" class="dropdownOpen"
+                                     style="display: none;"></div>
+
+                                <div x-show="dropdownOpen" class="dropdownOpen_inner" style="display: none;">
+                                    <a href="#" class="dropdownOpen_links">Profile</a>
+                                    <a href="#" class="dropdownOpen_links">Settings</a>
+                                    <a href="/login" class="dropdownOpen_links">Logout</a>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </header>
-                <main style="flex: 1 1 0%; overflow:hidden; overflow-y:auto; overflow-x:hidden; ">
-                    <div class="w3-container main_content_wrapper ">
-                        <h3 class="w3-xlarge">Dashboard</h3>
+                    </header>
+                    <main style="flex: 1 1 0%; overflow:hidden; overflow-y:auto; overflow-x:hidden; ">
+                        <div class="w3-container main_content_wrapper ">
+                            <h3 class="w3-xlarge">Dashboard</h3>
+                            <wicket:child/>
+                            <!-- Content come here  -->
 
-                        <!-- Content come here  -->
 
-
-                    </div>
-                </main>
+                        </div>
+                    </main>
+                </div>
             </div>
-        </div>
-
+        </wicket:extend>
     </body>
 
 </html>
